--- a/exp_must_azure_test/views/candidatureRead.handlebars
+++ b/exp_must_azure_test/views/candidatureRead.handlebars
@@ -185,7 +185,7 @@
 				{{#if rh}}
 					{{#compare displayTabRh 0 operator="=="}}
 					<div id="manager-tab">
-						<form id="form">
+						<form>
 							<textarea readonly name="text-area" class="p-4 w-full rounded bg-gray-500 min-h-[128px]">{{managerNote}}</textarea>
 						</form>
 					</div>
@@ -196,7 +196,7 @@
 					</div>
 					{{else}}
 					<div id="manager-tab" class="hidden">
-						<form id="form">
+						<form>
 							<textarea readonly name="text-area" class="p-4 w-full rounded bg-gray-500 min-h-[128px]">{{managerNote}}</textarea>
 						</form>
 					</div>
@@ -216,7 +216,7 @@
 						</form>
 					</div>
 					<div id="rh-tab" class="hidden">
-						<form id="form">
+						<form>
 							<textarea readonly name="text-area" class="p-4 w-full rounded bg-gray-500 min-h-[128px]">{{rhNote}}</textarea>
 						</form>
 					</div>
@@ -227,7 +227,7 @@
 						</form>
 					</div>
 					<div id="rh-tab">
-						<form id="form">
+						<form>
 							<textarea readonly name="text-area" class="p-4 w-full rounded bg-gray-500 min-h-[128px]">{{rhNote}}</textarea>
 						</form>
 					</div>
