--- a/exp_must_azure_test/views/fichePosteList.handlebars
+++ b/exp_must_azure_test/views/fichePosteList.handlebars
@@ -65,84 +65,84 @@
 										class='bg-slate-300 rounded p-2'
 									>RH</div>
 								{{else}}
-									{{#compare
-										this.validationRH
-										1
-										operator='=='
-									}}
+									{{#compare this.validationRH 1 operator='=='}}
 										<div
 											class='bg-green-400 rounded p-2'
-										>RH</div>
-									{{else}}{{#compare
-											this.validationRH
-											2
-											operator='=='
-										}}
+										>
+											RH
+										</div>
+									{{else}}
+										{{#compare this.validationRH 2 operator='=='}}
 											<div
 												class='bg-red-400 rounded p-2'
-											>RH</div>
-										{{/compare}}{{/compare}}{{/compare}}
+											>
+												RH
+											</div>
+										{{/compare}}
+									{{/compare}}
+								{{/compare}}
 
-								{{#compare
-									this.validationFinance
-									0
-									operator='=='
-								}}
+								{{#compare this.validationFinance 0 operator='=='}}
 									<div
 										class='bg-slate-300 p-2 rounded'
-									>FI</div>
-								{{else}}{{#compare
-										this.validationFinance
-										1
-										operator='=='
-									}}
+									>
+										FI
+									</div>
+								{{else}}
+									{{#compare this.validationFinance 1 operator='=='}}
 										<div
 											class='bg-green-400 p-2 rounded'
-										>FI</div>
-									{{else}}{{#compare
-											this.validationFinance
-											2
-											operator='=='
-										}}
+										>
+											FI
+										</div>
+									{{else}}
+										{{#compare this.validationFinance 2 operator='=='}}
 											<div
 												class='bg-red-400 p-2 rounded'
-											>FI</div>
-										{{/compare}}{{/compare}}{{/compare}}
+											>
+												FI
+											</div>
+										{{/compare}}
+									{{/compare}}
+								{{/compare}}
 
 								{{#compare this.publicationRH 0 operator='=='}}
 									<div
 										class='bg-slate-300 p-2 rounded'
-									>PU</div>
-								{{else}}{{#compare
-										this.publicationRH
-										1
-										operator='=='
-									}}
+									>
+										PU
+									</div>
+								{{else}}
+									{{#compare this.publicationRH 1 operator='=='}}
 										<div
 											class='bg-green-400 p-2 rounded'
-										>PU</div>
-									{{else}}{{#compare
-											this.publicationRH
-											2
-											operator='=='
-										}}
-											<div
-												class='bg-red-400 p-2 rounded'
-											>PU</div>
-										{{/compare}}{{/compare}}{{/compare}}
+										>
+											PU
+										</div>
+									{{else}}
+									{{#compare this.publicationRH 2 operator='=='}}
+										<div
+											class='bg-red-400 p-2 rounded'
+										>
+											PU
+										</div>
+										{{/compare}}
+									{{/compare}}
+								{{/compare}}
+							</div>
+						{{/compare}}
 
-        </div>
 
-
-        <span class=" text-sm text-white rounded-full bg-slate-600 flex items-center justify-center font-mono p-1 ml-3 w-6 h-6">{{this.nbCandidature}}</span>
-        <span  class="flex items-center justify-center pl-3"> {{this.createdAt}}</span>
-        </a>
-        </li>
-        {{/each}}
-    </ul>
-    <a href="http://localhost:8090/dashboard">
-    <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full">
-  retour
-</button> </a>
+						<span class=" text-sm text-white rounded-full bg-slate-600 flex items-center justify-center font-mono p-1 ml-3 w-6 h-6">{{this.nbCandidature}}</span>
+						<span  class="flex items-center justify-center pl-3"> {{this.createdAt}}</span>
+        			</a>
+        		</li>
+        	{{/each}}
+    	</ul>
+    	<a href="/dashboard">
+    		<button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full">
+  				Retour
+			</button>
+		</a>
     </div>
-    </div>
+</div>
