--- a/exp_must_azure_test/views/fichePosteRead.handlebars
+++ b/exp_must_azure_test/views/fichePosteRead.handlebars
@@ -1,4 +1,4 @@
-<a href="http://localhost:8090/ficheposte/list">
+<a href="/ficheposte/list">
 	<button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full">
 			Retour
 	</button>
