--- a/exp_must_azure_test/views/organigramme.handlebars
+++ b/exp_must_azure_test/views/organigramme.handlebars
@@ -1,36 +1,39 @@
-<div class='flex flex-col items-center pb-10'>
+<div class='flex flex-col items-center mt-10'>
 <div class='w-1/3 bg-white rounded-lg border border-gray-700 shadow-md bg-gray-800'>
 	<div class='flex flex-col items-center pb-10'>
 		<h5
 			class='mb-1 text-xl font-medium text-white'
 		>{{manager.displayName}}</h5>
-		<span class='text-sm text-gray-400'>{{manager.jobTitle}}</span>
-		<span class='text-sm text-gray-400'>{{manager.mail}}</span>
-		<span class='text-sm text-gray-400'>{{manager.businessPhones}}</span>
+		<span class='text-sm text-gray-800'>{{manager.displayName}}</span>
+		<span class='text-sm text-gray-800'>{{manager.jobTitle}}</span>
+		<span class='text-sm text-gray-800'>{{manager.mail}}</span>
+		<span class='text-sm text-gray-800'>{{manager.businessPhones}}</span>
 	</div>
 </div>
 
-<div class='w-1/3 bg-white rounded-lg border border-gray-700 shadow-md bg-gray-800'>
+<div class='w-1/3 bg-white rounded-lg border border-gray-700 shadow-md bg-gray-800 mt-5'>
 	<div class='flex flex-col items-center pb-10'>
 		<h5
 			class='mb-1 text-xl font-medium text-gray-900 dark:text-white'
 		>{{user.displayName}}</h5>
-		<span class='text-sm text-gray-400'>{{user.jobTitle}}</span>
-		<span class='text-sm text-gray-400'>{{user.mail}}</span>
-		<span class='text-sm text-gray-400'>{{user.businessPhones}}</span>
+		<span class='text-sm text-gray-800'>{{user.displayName}}</span>
+		<span class='text-sm text-gray-800'>{{user.jobTitle}}</span>
+		<span class='text-sm text-gray-800'>{{user.mail}}</span>
+		<span class='text-sm text-gray-800'>{{user.businessPhones}}</span>
 	</div>
 </div>
 
 <div class='w-full flex justify-center items-center'> 
 {{#each coworker}}
-<div class='w-1/3 bg-white rounded-lg border border-gray-700 shadow-md bg-gray-800'>
+<div class='w-1/3 bg-white rounded-lg border border-gray-700 shadow-md bg-gray-800 mt-5'>
 	<div class='flex flex-col items-center pb-10'>
 		<h5
 			class='mb-1 text-xl font-medium text-gray-900 dark:text-white'
 		>{{displayName}}</h5>
-		<span class='text-sm text-gray-400'>{jobTitle}}</span>
-		<span class='text-sm text-gray-400'>{mail}}</span>
-		<span class='text-sm text-gray-400'>{{businessPhones}}</span>
+		<span class='text-sm text-gray-800'>{{displayName}}</span>
+		<span class='text-sm text-gray-800'>{jobTitle}}</span>
+		<span class='text-sm text-gray-800'>{mail}}</span>
+		<span class='text-sm text-gray-800'>{{businessPhones}}</span>
 	</div>
 </div>
 {{/each}}	
@@ -38,16 +41,15 @@
 
 <div class='w-full flex justify-center items-center'> 
 {{#each directReports}}
-<div class='w-1/3 bg-white rounded-lg border border-gray-700 shadow-md bg-gray-800'>
+<div class='w-1/3 bg-white rounded-lg border border-gray-700 shadow-md bg-gray-800 mt-5'>
 	<div class='flex flex-col items-center justify-center pb-10'>
 		<h5
 			class='mb-1 text-xl font-medium text-white'
 		>{{displayName}}</h5>
-		<span class='text-sm text-gray-400'>{{jobTitle}}</span>
-		<span class='text-sm text-gray-400'>{{mail}}</span>
-		<span
-			class='text-sm text-gray-400'
-		>{{businessPhones}}</span>
+		<span class='text-sm text-gray-800'>{{displayName}}</span>
+		<span class='text-sm text-gray-800'>{{jobTitle}}</span>
+		<span class='text-sm text-gray-800'>{{mail}}</span>
+		<span class='text-sm text-gray-800'>{{businessPhones}}</span>
 	</div>
 </div>
 {{/each}}	
