--- a/exp_must_azure_test/views/components/managerDashboardSidebar.handlebars
+++ b/exp_must_azure_test/views/components/managerDashboardSidebar.handlebars
@@ -69,7 +69,7 @@
 			</li>
 			<li>
 				<a
-					href='#'
+					href='/candidature/list'
 					class='flex items-center p-2 text-base font-normal text-white rounded-lg hover:bg-gray-700'
 				>
 					<svg
