--- a/exp_must_azure_test/views/candidatureList.handlebars
+++ b/exp_must_azure_test/views/candidatureList.handlebars
@@ -75,5 +75,10 @@
 				</li>
 			{{/each}}
 		</ul>
+		<a href="/dashboard">
+    		<button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full">
+  				Retour
+			</button>
+		</a>
 	</div>
 </div>
