--- a/exp_must_azure_test/views/fichePosteList.handlebars
+++ b/exp_must_azure_test/views/fichePosteList.handlebars
@@ -139,7 +139,7 @@
         		</li>
         	{{/each}}
     	</ul>
-    	<a href="/dashboard">
+    	<a href="/dashboard/{{group}}">
     		<button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full">
   				Retour
 			</button>
