--- a/exp_must_azure_test/views/organigramme.handlebars
+++ b/exp_must_azure_test/views/organigramme.handlebars
@@ -10,19 +10,6 @@
 		<span class='text-sm text-gray-800'>{{manager.businessPhones}}</span>
 	</div>
 </div>
-
-<div class='w-1/3 bg-white rounded-lg border border-gray-700 shadow-md bg-gray-800 mt-5'>
-	<div class='flex flex-col items-center pb-10'>
-		<h5
-			class='mb-1 text-xl font-medium text-gray-900 dark:text-white'
-		>{{user.displayName}}</h5>
-		<span class='text-sm text-gray-800'>{{user.displayName}}</span>
-		<span class='text-sm text-gray-800'>{{user.jobTitle}}</span>
-		<span class='text-sm text-gray-800'>{{user.mail}}</span>
-		<span class='text-sm text-gray-800'>{{user.businessPhones}}</span>
-	</div>
-</div>
-
 <div class='w-full flex justify-center items-center'> 
 {{#each coworker}}
 <div class='w-1/3 bg-white rounded-lg border border-gray-700 shadow-md bg-gray-800 mt-5'>
@@ -31,14 +18,13 @@
 			class='mb-1 text-xl font-medium text-gray-900 dark:text-white'
 		>{{displayName}}</h5>
 		<span class='text-sm text-gray-800'>{{displayName}}</span>
-		<span class='text-sm text-gray-800'>{jobTitle}}</span>
-		<span class='text-sm text-gray-800'>{mail}}</span>
+		<span class='text-sm text-gray-800'>{{jobTitle}}</span>
+		<span class='text-sm text-gray-800'>{{mail}}</span>
 		<span class='text-sm text-gray-800'>{{businessPhones}}</span>
 	</div>
 </div>
 {{/each}}	
 </div>
-
 <div class='w-full flex justify-center items-center'> 
 {{#each directReports}}
 <div class='w-1/3 bg-white rounded-lg border border-gray-700 shadow-md bg-gray-800 mt-5'>
