--- a/exp_must_azure_test/public/stylesheets/general_style.css
+++ b/exp_must_azure_test/public/stylesheets/general_style.css
@@ -14,3 +14,12 @@
 body {
 	overflow-x: hidden;
 }
+
+/* Change the white to any color */
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active{
+	transition: background-color 5000s ease-in-out 0s;
+	-webkit-text-fill-color: white !important;
+}
