--- a/exp_must_azure_test/views/components/button4.handlebars
+++ b/exp_must_azure_test/views/components/button4.handlebars
@@ -1,6 +1,6 @@
 <a
 	href={{href}}
-	class='flex items-center p-3 text-base font-bold text-indigo-900 border-solid border border-indigo-700 rounded-lg hover:bg-slate-800/50 group hover:shadow'
+	class='flex items-center p-3 w-fit text-base font-bold text-indigo-900 border-solid border border-indigo-700 rounded-lg hover:bg-slate-800/50 group hover:shadow'
 >
 	{{#if svg}}
 		{{{svg}}}
