--- a/exp_must_azure_test/views/components/button5.handlebars
+++ b/exp_must_azure_test/views/components/button5.handlebars
@@ -1,6 +1,6 @@
 <a
 	href={{href}}
-	class='flex items-center p-3 text-base font-bold text-orange-400 border-solid border border-orange-400 rounded-lg hover:bg-slate-800/50 group hover:shadow'
+	class='flex items-center p-3 w-fit text-base font-bold text-orange-400 border-solid border border-orange-400 rounded-lg hover:bg-slate-800/50 group hover:shado'
 >
 	{{#if svg}}
 		{{{svg}}}
