--- a/exp_must_azure_test/views/fichePosteList.handlebars
+++ b/exp_must_azure_test/views/fichePosteList.handlebars
@@ -1,16 +1,16 @@
-<div class='relative top-6 flex justify-center'>
+<div class='relative flex flex-col justify-center'>
+	<div class="grow p-6 w-fit m-auto">
+		<h1 class="text-5xl font-semibold">Liste des fiches de poste</h1>
+	</div>
 	<div
-		class='grow p-4 max-w-3xl bg-slate-800 rounded-lg border shadow-md sm:p-6'
+		class='grow p-4 max-w-3xl m-auto bg-slate-800 rounded-lg border shadow-md sm:p-6'
 	>
-		<div class='flex flex-col justify-center items-center'>
-			<h5
-				class='mb-3 text-base font-semibold text-gray-900 lg:text-xl dark:text-white'
-			>
-				Liste des fiches de poste
-			</h5>
-			
-		</div>
-		<ul class='my-4 space-y-3'>
+		<ul class='my-4 space-y-3 max-w-3xl'>
+			<div class="mb-6 w-fit m-auto">
+				{{>button5 href='/ficheposte/create' title='Créer une fiche de poste' svg='<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+					<path stroke-linecap="round" stroke-linejoin="round" d="M12 10.5v6m3-3H9m4.06-7.19l-2.12-2.12a1.5 1.5 0 00-1.061-.44H4.5A2.25 2.25 0 002.25 6v12a2.25 2.25 0 002.25 2.25h15A2.25 2.25 0 0021.75 18V9a2.25 2.25 0 00-2.25-2.25h-5.379a1.5 1.5 0 01-1.06-.44z" />
+				</svg>'}}
+			</div>
 			{{#each fichePosteList}}
 				<li>
 					<a
@@ -53,9 +53,26 @@
 							class='flex-1 ml-3 whitespace-nowrap'
 						>{{this.label}}</span>
 						{{#compare ../displayValidationIcons 1 operator='=='}}
-							<span
-								class='inline-flex items-center justify-center px-2 py-0.5 ml-3 text-xs font-medium text-gray-500 bg-gray-200 rounded dark:bg-gray-700 dark:text-gray-400'
-							>{{this.urgency}}</span>
+							{{#compare this.urgency "NON-URGENT" operator='=='}}
+								<span
+									class='inline-flex items-center justify-center px-2 py-0.5 ml-3 text-xs font-medium text-gray-500 bg-gray-200 rounded'
+								>{{this.urgency}}</span>
+							{{/compare}}
+							{{#compare this.urgency "PEU-URGENT" operator='=='}}
+								<span
+									class='inline-flex items-center justify-center px-2 py-0.5 ml-3 text-xs font-medium text-gray-500 bg-orange-200 rounded'
+								>{{this.urgency}}</span>
+							{{/compare}}
+							{{#compare this.urgency "URGENT" operator='=='}}
+								<span
+									class='inline-flex items-center justify-center px-2 py-0.5 ml-3 text-xs font-medium text-white bg-orange-400 rounded'
+								>{{this.urgency}}</span>
+							{{/compare}}
+							{{#compare this.urgency "TRES-URGENT" operator='=='}}
+								<span
+									class='inline-flex items-center justify-center px-2 py-0.5 ml-3 text-xs font-medium text-white bg-orange-900 rounded'
+								>{{this.urgency}}</span>
+							{{/compare}}
 							<div
 								class='ml-6 h-6 rounded-[3px] flex items-center gap-4'
 							>
