--- a/exp_must_azure_test/views/listfile.handlebars
+++ b/exp_must_azure_test/views/listfile.handlebars
@@ -2,7 +2,7 @@
 	<div class="p-6 w-fit m-auto">
 		<h1 class="text-5xl font-semibold">Ressources d'entreprise</h1>
 	</div>
-	<div class='relative w-1/3 m-auto top-6 flex justify-center'>
+	<div class='relative m-auto top-6 flex justify-center'>
 		<div
 			class='grow p-4 max-w-3xl bg-slate-800 rounded-lg border shadow-md sm:p-6 flex flex-col items-center'
 		>
