[UPDATE] style of return buttons

--- a/exp_must_azure_test/views/candidatureRead.handlebars
+++ b/exp_must_azure_test/views/candidatureRead.handlebars
@@ -1,3 +1,7 @@
+<div class="m-4">
+	{{>returnButton route="/candidature/list"}}
+</div>
+
 <div class="flex">
 	<div class="grow mt-4">
 		{{>fichePosteReadComponent}}
