--- a/exp_must_azure_test/views/fichePosteRead.handlebars
+++ b/exp_must_azure_test/views/fichePosteRead.handlebars
@@ -1,8 +1,8 @@
-<a href="/ficheposte/list">
-	<button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full">
-			Retour
-	</button>
-</a>
+{{#if displayValidationIcons}}
+	<div class="m-4">
+		{{>returnButton route="/ficheposte/list"}}
+	</div>
+{{/if}}
 
 {{>fichePosteReadComponent}}
 
