--- a/exp_must_azure_test/views/organigramme.handlebars
+++ b/exp_must_azure_test/views/organigramme.handlebars
@@ -1,8 +1,9 @@
+<h1 style='color:aliceblue; text-align: center; font-size: 40px'>Manager</h1>
 <div class='flex flex-col items-center mt-10'>
 <div class='w-1/3 bg-white rounded-lg border border-gray-700 shadow-md bg-gray-800'>
 	<div class='flex flex-col items-center pb-10'>
 		<h5
-			class='mb-1 text-xl font-medium text-white'
+			class='mb-1 text-xl font-medium text-white text-gray-900 dark:'
 		>{{manager.displayName}}</h5>
 		<span class='text-sm text-gray-800'>{{manager.displayName}}</span>
 		<span class='text-sm text-gray-800'>{{manager.jobTitle}}</span>
@@ -10,6 +11,7 @@
 		<span class='text-sm text-gray-800'>{{manager.businessPhones}}</span>
 	</div>
 </div>
+<h1 style='color:aliceblue; text-align: center; font-size: 40px'>Equipe</h1>
 <div class='w-full flex justify-center items-center'> 
 {{#each coworker}}
 <div class='w-1/3 bg-white rounded-lg border border-gray-700 shadow-md bg-gray-800 mt-5'>
@@ -17,7 +19,6 @@
 		<h5
 			class='mb-1 text-xl font-medium text-gray-900 dark:text-white'
 		>{{displayName}}</h5>
-		<span class='text-sm text-gray-800'>{{displayName}}</span>
 		<span class='text-sm text-gray-800'>{{jobTitle}}</span>
 		<span class='text-sm text-gray-800'>{{mail}}</span>
 		<span class='text-sm text-gray-800'>{{businessPhones}}</span>
@@ -25,14 +26,14 @@
 </div>
 {{/each}}	
 </div>
-<div class='w-full flex justify-center items-center'> 
+<h1 style='color:aliceblue; text-align: center; font-size: 40px'>Subordonnés</h1>
+<div class='w-full flex flex-row'>
 {{#each directReports}}
 <div class='w-1/3 bg-white rounded-lg border border-gray-700 shadow-md bg-gray-800 mt-5'>
 	<div class='flex flex-col items-center justify-center pb-10'>
 		<h5
-			class='mb-1 text-xl font-medium text-white'
+			class='mb-1 text-xl font-medium text-gray-900 dark:text§white'
 		>{{displayName}}</h5>
-		<span class='text-sm text-gray-800'>{{displayName}}</span>
 		<span class='text-sm text-gray-800'>{{jobTitle}}</span>
 		<span class='text-sm text-gray-800'>{{mail}}</span>
 		<span class='text-sm text-gray-800'>{{businessPhones}}</span>
