[UDPATE] style of Employee list page

--- a/exp_must_azure_test/views/home.handlebars
+++ b/exp_must_azure_test/views/home.handlebars
@@ -1,6 +1,6 @@
 <div>
-	<div class="absolute z-10">
-		<img src="images/home/page-accueil.jpg" class="opacity-30"></img>
+	<div class="absolute z-10 w-full">
+		<img src="images/home/page-accueil.jpg" class="opacity-30 w-full"></img>
 	</div>
 	<div class="absolute z-20 w-full">
 		<div class="">
