--- a/exp_must_azure_test/views/listUser.handlebars
+++ b/exp_must_azure_test/views/listUser.handlebars
@@ -1,29 +1,94 @@
-<p>hey</p>
-<ul class="my-4 space-y-3">
-{{#each users }}
-    <li>
-        <div class="my-4 space-y-3">
-            <h>displayName :{{this.displayName}}</h>
-            <br>
-            <h>givenName : {{this.givenName}}</h>
-            <br>
-            <h>jobTitle :{{this.jobTitle}}</h>
-            <br>
-            <h>mail :{{this.mail}}</h>
-            <br>
-            <h>mobilePhone :{{this.mobilePhone}}</h>
-            <br>
-            <h>officeLocation :{{this.officeLocation}}</h>
-            <br>
-            <h>preferredLanguage :{{this.preferredLanguage}}</h>
-            <br>
-            <h>surname :{{this.surname}}</h>
-            <br>
-            <h>userPrincipalName :{{this.userPrincipalName}}</h>
-            <br>
-        </div>
-        <p>--------------------------------------------</p>
-    </li>
-<br>
-{{/each}}
-</ul>
+<div class="flex">
+    <div class="m-4">
+        {{>returnButton route="/dashboard"}}
+    </div>
+    <div class="grow w-fit m-auto mt-6">
+        <h1 class="text-5xl font-semibold w-fit m-auto">Liste des employés</h1>
+        <ul class="w-fit m-auto mt-6 space-y-3">
+        {{#each users }}
+            <div
+				class='p-4 max-w-3xl bg-slate-800 rounded-lg border shadow-md sm:p-6 flex gap-6'
+			>
+                <div class="m-4 flex flex-col">
+                    <div>
+                        <p class="w-fit m-auto text-xl font-semibold">{{this.displayName}}</p>
+                    </div>
+
+                    <div class="m-auto">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-12 h-12">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 6a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0zM4.501 20.118a7.5 7.5 0 0114.998 0A17.933 17.933 0 0112 21.75c-2.676 0-5.216-.584-7.499-1.632z" />
+                        </svg>
+                    </div>
+                </div>
+                <li class="grow">
+                    <div class="my-4 space-y-3">
+                        {{#if this.surname}}
+                            <div class="flex gap-6">
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                                    <path stroke-linecap="round" stroke-linejoin="round" d="M15.182 15.182a4.5 4.5 0 01-6.364 0M21 12a9 9 0 11-18 0 9 9 0 0118 0zM9.75 9.75c0 .414-.168.75-.375.75S9 10.164 9 9.75 9.168 9 9.375 9s.375.336.375.75zm-.375 0h.008v.015h-.008V9.75zm5.625 0c0 .414-.168.75-.375.75s-.375-.336-.375-.75.168-.75.375-.75.375.336.375.75zm-.375 0h.008v.015h-.008V9.75z" />
+                                </svg>
+
+                                <p>{{this.surname}}</p>
+                            </div>
+                        {{/if}}
+
+                        <div class="flex gap-6">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M20.25 14.15v4.25c0 1.094-.787 2.036-1.872 2.18-2.087.277-4.216.42-6.378.42s-4.291-.143-6.378-.42c-1.085-.144-1.872-1.086-1.872-2.18v-4.25m16.5 0a2.18 2.18 0 00.75-1.661V8.706c0-1.081-.768-2.015-1.837-2.175a48.114 48.114 0 00-3.413-.387m4.5 8.006c-.194.165-.42.295-.673.38A23.978 23.978 0 0112 15.75c-2.648 0-5.195-.429-7.577-1.22a2.016 2.016 0 01-.673-.38m0 0A2.18 2.18 0 013 12.489V8.706c0-1.081.768-2.015 1.837-2.175a48.111 48.111 0 013.413-.387m7.5 0V5.25A2.25 2.25 0 0013.5 3h-3a2.25 2.25 0 00-2.25 2.25v.894m7.5 0a48.667 48.667 0 00-7.5 0M12 12.75h.008v.008H12v-.008z" />
+                            </svg>
+
+                            <p>
+                                {{#if this.jobTitle}}
+                                    {{this.jobTitle}}
+                                {{else}}
+                                    Non renseigné
+                                {{/if}}
+                            </p>
+                        </div>
+                        <div class="flex gap-6">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M21.75 6.75v10.5a2.25 2.25 0 01-2.25 2.25h-15a2.25 2.25 0 01-2.25-2.25V6.75m19.5 0A2.25 2.25 0 0019.5 4.5h-15a2.25 2.25 0 00-2.25 2.25m19.5 0v.243a2.25 2.25 0 01-1.07 1.916l-7.5 4.615a2.25 2.25 0 01-2.36 0L3.32 8.91a2.25 2.25 0 01-1.07-1.916V6.75" />
+                            </svg>
+
+                            <p>
+                                {{#if this.mail}}
+                                    {{this.mail}}
+                                {{else}}
+                                    Non renseigné
+                                {{/if}}
+                            </p>
+                        </div>
+                        <div class="flex gap-6">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 6.75c0 8.284 6.716 15 15 15h2.25a2.25 2.25 0 002.25-2.25v-1.372c0-.516-.351-.966-.852-1.091l-4.423-1.106c-.44-.11-.902.055-1.173.417l-.97 1.293c-.282.376-.769.542-1.21.38a12.035 12.035 0 01-7.143-7.143c-.162-.441.004-.928.38-1.21l1.293-.97c.363-.271.527-.734.417-1.173L6.963 3.102a1.125 1.125 0 00-1.091-.852H4.5A2.25 2.25 0 002.25 4.5v2.25z" />
+                            </svg>
+
+                            <p>
+                                {{#if this.mobilePhone}}
+                                    {{this.mobilePhone}}
+                                {{else}}
+                                    Non renseigné
+                                {{/if}}
+                            </p>
+                        </div>
+                        <div class="flex gap-6">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 21h19.5m-18-18v18m10.5-18v18m6-13.5V21M6.75 6.75h.75m-.75 3h.75m-.75 3h.75m3-6h.75m-.75 3h.75m-.75 3h.75M6.75 21v-3.375c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21M3 3h12m-.75 4.5H21m-3.75 3.75h.008v.008h-.008v-.008zm0 3h.008v.008h-.008v-.008zm0 3h.008v.008h-.008v-.008z" />
+                            </svg>
+
+                            <p>
+                                {{#if this.officeLocation}}
+                                    {{this.officeLocation}}
+                                {{else}}
+                                    Non renseigné
+                                {{/if}}
+                            </p>
+                        </div>
+                    </div>
+                </li>
+            </div>
+        <br>
+        {{/each}}
+        </ul>
+    </div>
+</div>
